--- a/data/dataset1/Data download.Rmd
+++ b/data/dataset1/Data download.Rmd
@@ -3,7 +3,7 @@ title: "Data preparation"
 output: html_document
 date: "2023-09-12"
 ---
-```{r}
+```{r eval=FALSE, include=FALSE}
 # Load relevant packages
 install.packages("tidyverse")
 install.packages("dplyr")
@@ -23,6 +23,14 @@ Use 3 datasets (in no particular order):
 urls = c("https://datasets.imdbws.com/title.episode.tsv.gz", "https://datasets.imdbws.com/title.ratings.tsv.gz", "https://datasets.imdbws.com/title.basics.tsv.gz")
 for (url in urls) {
   filename =  paste(gsub('[^a-zA-Z]', '',url), '.csv')
+  download.file(url, destfile = filename)
 }
+
+```
+
+Filter for seasonal length of 5
+```{r}
+
+
 
 ```
