--- a/data/dataset1/Data download.Rmd
+++ b/data/dataset1/Data download.Rmd
@@ -23,14 +23,20 @@ Use 3 datasets (in no particular order):
 urls = c("https://datasets.imdbws.com/title.episode.tsv.gz", "https://datasets.imdbws.com/title.ratings.tsv.gz", "https://datasets.imdbws.com/title.basics.tsv.gz")
 for (url in urls) {
   filename =  paste(gsub('[^a-zA-Z]', '',url), '.csv')
+  filename = gsub('httpsdatasetsimdbwscom', '', filename)
   download.file(url, destfile = filename)
 }
 
 ```
 
-Filter for seasonal length of 5
+Load datasets
 ```{r}
+episodes <- read_csv('titleepisodetsvgz .csv')
+rating <- read_csv('titleratingstsvgz .csv')
+names <- read_csv('titlebasicstsvgz .csv')
+```
 
-
+Count unique series and look at long series (seasons >= 5)
+```{r}
 
 ```
